<resources>
        <string name="app_name">Architecture</string>
        <string name="normal_use">基本使用</string>
        <string name="observability">动态绑定数据</string>
        <string name="adapter">适配器</string>
        <string name="architecture">配合ViewModel使用</string>
        <string name="two_way">双向绑定</string>
        <string name="user_name">姓名:%s</string>
        <string name="user_phone">手机:%s</string>
        <string name="user_description">描述:%s</string>
        <string name="mathematical_add">数学运算符: %d + %d = %d</string>
        <string name="collection">数据结构:list[1] = %s</string>
        <string name="is_null">空值判断: %s </string>
        <string name="c_name">商品名称： </string>
        <string name="c_price">商品价格： </string>
        <string name="c_count">商品数量： </string>
        <string name="change_count">change count</string>
        <string name="count_value">count value: %d</string>
        <string name="count_add">增加</string>
        <string name="count_del">减少</string>
        <string name="total_price">总价: %d</string>
        <string name="count">数量: %d</string>
        <string name="observable">Observable(%b):</string>
        <string name="remember">记住密码(%b):</string>
        <string name="bindable">BindAble(%b):</string>
        <string name="account">帐号:</string>
        <string name="password">密码:</string>
</resources>
